--- a/src/assets/styles/base/_resets.scss
+++ b/src/assets/styles/base/_resets.scss
@@ -17,6 +17,7 @@ button, a, li {
 
 button {
     border: none;
+    transition: 0.3s ease-in;
 }
 
 li {
