--- a/src/assets/styles/components/_buttons.scss
+++ b/src/assets/styles/components/_buttons.scss
@@ -7,4 +7,8 @@
     font-family: $regularFont;
     color: $white;
     font-size: 1.8rem;
+
+    &:hover {
+        background-color: #48ACD0;
+    }
 }
