--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -14,8 +14,11 @@
         position: absolute;
         bottom: 14%;
         left: 14%;
-        width: 243px;
-        height: 69px;
+        // width: 243px;
+        // height: 69px;
+        width: 12vw;
+        height: 7vh;
+        font-size: 1.4vw;
     }
 }
 
@@ -30,10 +33,29 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        overflow-y: hidden;
+        overflow-x: scroll;
 
         .message {
             display: flex;
             align-items: center;
+
+            .svg__container {
+                width: 20px;
+                height: 20px;
+
+                img {
+                    width: 100%;
+                }
+            }
+            
+            span {
+                color: $white;
+                font-family: $semiBoldFont;
+                font-size: 1.8rem;
+                margin: 0 40px;
+                white-space: nowrap;
+            }
         }
     }
 }
